website updates html css js

--- a/contact.html
+++ b/contact.html
@@ -196,7 +196,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>copyright © 2025, apexlandbase | Made By Yogita (yogita11i.sns@gmail.com)</p>
+      <p>copyright © 2026, apexlandbase | Managed by ApexLandbase</p>
     </div>
   </footer>
 
