--- a/whiteland/index.html
+++ b/whiteland/index.html
@@ -230,19 +230,19 @@
         <div class="fp-track" id="fpTrack">
 
           <div class="fp-slide">
-            <img src="/whiteland/images/floorplan1.webp" alt="Core Plan 3 BHK">
+            <img src="/whiteland/images/floorplan1.webp" alt="Core Plan 3 BHK" loading="lazy">
           </div>
 
           <div class="fp-slide">
-            <img src="/whiteland/images/floorplan2.webp" alt="Core Plan 4 BHK">
+            <img src="/whiteland/images/floorplan2.webp" alt="Core Plan 4 BHK" loading="lazy">
           </div>
 
           <div class="fp-slide">
-            <img src="/whiteland/images/floorplanlg.webp" alt="4 BHK Large">
+            <img src="/whiteland/images/floorplanlg.webp" alt="4 BHK Large" loading="lazy">
           </div>
 
           <div class="fp-slide">
-            <img src="/whiteland/images/floorplanmd.webp" alt="4 BHK Medium">
+            <img src="/whiteland/images/floorplanmd.webp" alt="4 BHK Medium" loading="lazy">
           </div>
 
         </div>
