--- a/delphine/index.html
+++ b/delphine/index.html
@@ -3,8 +3,41 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Central Park Delphine | Ultra Luxury Residences</title>
+
+  <!-- SEO TITLE -->
+  <title>Central Park Delphine Gurugram | Ultra Luxury Sky Villas & Apartments</title>
+
+  <!-- META DESCRIPTION (155–160 chars) -->
+  <meta name="description"
+    content="Central Park Delphine Gurugram offers ultra luxury sky villas & premium apartments with private lift lobby, resort-style amenities & exclusive clubhouse.">
+
+  <!-- KEYWORDS (still useful for India SEO) -->
+  <meta name="keywords"
+    content="Central Park Delphine, Central Park Delphine Gurugram, luxury apartments Gurugram, sky villas Gurugram, ultra luxury residences Gurgaon">
+
+  <!-- VIEWPORT -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- CANONICAL (VERY IMPORTANT) -->
+  <link rel="canonical" href="https://www.apexlandbase.com/central-park-delphine">
+
+  <!-- OPEN GRAPH (SOCIAL SHARING) -->
+  <meta property="og:title" content="Central Park Delphine | Ultra Luxury Residences Gurugram">
+  <meta property="og:description"
+    content="Discover ultra luxury sky villas & premium apartments at Central Park Delphine, Gurugram. Download brochure & price list.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.apexlandbase.com/central-park-delphine">
+  <meta property="og:image" content="https://www.apexlandbase.com/delphine/images/overview.webp">
+
+  <!-- TWITTER -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Central Park Delphine Gurugram">
+  <meta name="twitter:description" content="Ultra luxury sky villas & apartments at Central Park Delphine, Gurugram.">
+  <meta name="twitter:image" content="https://www.apexlandbase.com/delphine/images/overview.webp">
+
+  <!-- CSS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="/editing/delphine.css">
 </head>
 
@@ -19,6 +52,7 @@
         <span class="project">DELPHINE</span>
         <small class="tagline">ULTRA LUXURY RESIDENCES</small>
       </div>
+
       <!-- MOBILE HAMBURGER (ADD HERE) -->
       <div class="hamburger" id="hamburger">
         <span></span>
@@ -34,11 +68,9 @@
         <a href="#amenities">Amenities</a>
         <a href="#gallery">Gallery</a>
         <a href="#contact">Contact</a>
-       <a href="javascript:void(0)"
-         class="brochure-header-btn"
-         onclick="openBrochure()">
-        Download Brochure
-      </a>
+        <a href="javascript:void(0)" class="brochure-header-btn" onclick="openBrochure()">
+          Download Brochure
+        </a>
       </nav>
 
     </div>
@@ -52,17 +84,19 @@
     </video>
 
     <div class="hero-content">
-      <h1>Sky Villas & Ultra-Luxury Living</h1>
-      <p class="hero-subtitle">A Landmark of Elegance at Central Park Resorts</p>
+      <h1>Central Park Delphine<br> – Ultra Luxury Sky Villas & Apartments in Gurugram</h1>
 
+      <p class="hero-subtitle">
+        Located at Central Park Resorts, offering private lift lobby, exclusive clubhouse & resort-style living.
+      </p>
       <div class="hero-highlights">
         <span>Ultra Luxury</span>
         <span>Sky Villas</span>
         <span>Exclusive Club</span>
       </div>
       <button class="brochure-header-btn" onclick="openBrochure()">
-      Download Brochure
-    </button>
+        Download Brochure
+      </button>
     </div>
   </section>
 
@@ -135,15 +169,13 @@
       </div>
 
       <div class="residences-images">
-        <img src="/delphine/images/residences.webp" alt="" loading="lazy">
-        <img src="/delphine/images/residence1.webp" alt="" loading="lazy">
+        <img src="/delphine/images/residences.webp" alt="Luxury dining Areas" loading="lazy">
+        <img src="/delphine/images/residence1.webp" alt="balconies Areas" loading="lazy">
       </div>
 
     </div>
   </section>
-
-
-  <!-- ================= MASTER PLAN ================= -->
+<!-- ================= MASTER PLAN ================= -->
   <section id="masterplan" class="masterplan">
     <div class="master-wrap">
       <div class="master-image">
@@ -153,9 +185,8 @@
         <small class="click-note">Click to view full master plan</small>
       </div>
 
-     <!-- RIGHT : CONTENT -->
+      <!-- RIGHT : CONTENT -->
       <div class="master-content">
-
         <h2 class="apex-title">Master Plan</h2>
         <span class="apex-line"></span>
 
@@ -217,7 +248,6 @@
 
     </div>
   </section>
-  <!-- ================= END FLOOR PLAN ================= -->
   <!-- ================= AMENITIES ================= -->
   <section class="apex-amenities" id="amenities">
     <div class="apex-amenities-wrap">
@@ -256,10 +286,10 @@
       <div class="section-line"></div>
 
       <div class="gallery">
-        <img src="/delphine/images/gallery1.webp" alt="" loading="lazy">
-        <img src="/delphine/images/gallery2.webp" alt="" loading="lazy">
-        <img src="/delphine/images/gallery3.webp" alt="" loading="lazy">
-        <img src="/delphine/images/gallery4.webp" alt="" loading="lazy">
+        <img src="/delphine/images/gallery1.webp" alt="Central park delphine dining areas" loading="lazy">
+        <img src="/delphine/images/gallery2.webp" alt="Central park buildings" loading="lazy">
+        <img src="/delphine/images/gallery3.webp" alt="Central park Pool view" loading="lazy">
+        <img src="/delphine/images/gallery4.webp" alt="central-park-delphine bedroom" loading="lazy">
       </div>
   </section>
   <!-- ===== APEX LANDBASE : COMMON POPUP FORM ===== -->
@@ -311,12 +341,12 @@
         </ul>
       </div>
 
-      <form> class="contact-form" id="contactForm2">
+      <form class= "contact-form" id="contactForm2">
         <input type="text" id="contact-name2" placeholder="Your Name" required>
         <input type="tel" id="contact-phone2" placeholder="Phone Number" required>
         <input type="email" id="contact-email2" placeholder="Email" required>
         <button type="submit">Submit Enquiry</button>
-        </form>
+      </form>
     </div>
   </section>
 
@@ -330,7 +360,7 @@
     <p><strong>RERA:Phase II: </strong>/997/729/2025/100 (Dated 16.10.2025)</p>
     <p><strong>RERA:Phase III:</strong> GGM/998/730/2025/101 (Dated 16.10.2025)</p>
     <p><strong>Address:</strong> Central Park Delphine, Gurugram</p>
-     <p>
+    <p>
       Disclaimer: This website is for information purposes only and does not
       constitute an offer to sell. Project details are indicative and subject
       to change. Marketed by <strong>Apex Landbase</strong>.
@@ -340,33 +370,33 @@
       <a href="index.html">Apex Landbase</a>
     </p>
   </footer>
-<!-- ============ CENTRAL PARK DELPHINE : BROCHURE MODAL ============ -->
-<div id="brochurePopup" class="brochure-modal" role="dialog" aria-modal="true">
+  <!-- ============ CENTRAL PARK DELPHINE : BROCHURE MODAL ============ -->
+  <div id="brochurePopup" class="brochure-modal" role="dialog" aria-modal="true">
 
-  <div class="modal-box">
+    <div class="modal-box">
 
-    <span class="close-modal" onclick="closeBrochure()">×</span>
+      <span class="close-modal" onclick="closeBrochure()">×</span>
 
-    <h3>Download Brochure</h3>
-    <p>Please fill your details to get the brochure</p>
+      <h3>Download Brochure</h3>
+      <p>Please fill your details to get the brochure</p>
 
-    <form id="brochureForm">
+      <form id="brochureForm">
 
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="tel" name="phone" placeholder="Phone Number" required>
-      <input type="email" name="email" placeholder="Email Address" required>
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="tel" name="phone" placeholder="Phone Number" required>
+        <input type="email" name="email" placeholder="Email Address" required>
 
-      <!-- TRACKING -->
-      <input type="hidden" name="source" value="Brochure Download">
-      <input type="hidden" name="project" value="Central Park Delphine">
+        <!-- TRACKING -->
+        <input type="hidden" name="source" value="Brochure Download">
+        <input type="hidden" name="project" value="Central Park Delphine">
 
-      <button type="submit">Submit & Download</button>
+        <button type="submit">Submit & Download</button>
 
-    </form>
+      </form>
+
+    </div>
 
   </div>
-
-</div>
   <!-- EMAILJS -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script>
