--- a/elan/index.html
+++ b/elan/index.html
@@ -7,7 +7,7 @@
   <title>Elan The Statement Sector 49 Gurugram | Ultra Luxury 4 BHK Residences</title>
 
   <meta name="description"
-    content="Elan The Statement Sector 49 Gurugram offers ultra luxury 4 BHK residences by Elan Group with smart home automation and premium amenities. Get price, floor plans & brochure.">
+    content="Elan The Statement Sector 49 Gurugram offers ultra luxury 4 BHK residences by Elan Group with smart home automation, premium amenities, price list & brochure.">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords"
@@ -23,45 +23,44 @@
 
   <!-- THEME -->
   <meta name="theme-color" content="#0e0e0e">
+  <meta name="robots" content="index, follow">
 </head>
 
 <body>
 
   <!-- ================= HEADER ================= -->
- <header class="site-header">
-  <div class="nav">
+  <header class="site-header">
+    <div class="nav">
 
-    <div class="logo-text">
-      <span class="brand">ELAN</span>
-      <span class="project">THE STATEMENT</span>
-      <small class="tagline">SECTOR 49, GURUGRAM</small>
+      <div class="logo-text">
+        <span class="brand">ELAN</span>
+        <span class="project">THE STATEMENT</span>
+        <small class="tagline">SECTOR 49, GURUGRAM</small>
+      </div>
+
+      <!-- MOBILE HAMBURGER (ADD HERE) -->
+      <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+
+      <nav class="menu" aria-label="Primary Navigation">
+        <a href="#overview">Overview</a>
+        <a href="#residences">Residences</a>
+        <a href="#masterplan">Master Plan</a>
+        <a href="#floorplan">Floor Plan</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#amenities">Amenities</a>
+        <a href="#contact">Contact</a>
+
+        <a href="javascript:void(0)" class="brochure-header-btn" onclick="openBrochure()">
+          Download Brochure
+        </a>
+      </nav>
+
     </div>
-
-    <!-- MOBILE HAMBURGER (ADD HERE) -->
-    <div class="hamburger" id="hamburger">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-
-    <nav class="menu" aria-label="Primary Navigation">
-      <a href="#overview">Overview</a>
-      <a href="#residences">Residences</a>
-      <a href="#masterplan">Master Plan</a>
-      <a href="#floorplan">Floor Plan</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#amenities">Amenities</a>
-      <a href="#contact">Contact</a>
-
-      <a href="javascript:void(0)"
-         class="brochure-header-btn"
-         onclick="openBrochure()">
-        Download Brochure
-      </a>
-    </nav>
-
-  </div>
-</header>
+  </header>
   <!-- ================= HERO ================= -->
   <section class="hero">
 
@@ -70,7 +69,7 @@
     </video>
 
     <div class="hero-content">
-      <h1>Elan The Statement –Ultra Luxury Residences in Sector 49 <br> Gurugram</h1>
+      <h1>Elan The Statement –Ultra Luxury Residences in Sector 49, Gurugram</h1>
       <p class="hero-subtitle">
         Premium 4 BHK Residences by Elan Group
       </p>
@@ -80,7 +79,7 @@
         <span>Premium Living</span>
       </div>
 
-      <button class="brochure-header-btn" onclick="openBrochure()" aria-label="Download Brochure">
+      <button id="BrochureBtnn"class="brochure-header-btn" onclick="openBrochure()" aria-label="Download Brochure">
         Download Brochure
       </button>
     </div>
@@ -162,8 +161,8 @@
       </div>
 
       <div class="residences-images">
-        <img src="/elan/images/residence1.webp" alt="Luxury Living Room">
-        <img src="/elan/images/residence2.webp" alt="Luxury Bedroom">
+        <img src="/elan/images/residence1.webp" alt="Luxury Living Room" loading="lazy">
+        <img src="/elan/images/residence2.webp" alt="Luxury Bedroom" loading="lazy">
       </div>
 
     </div>
@@ -175,7 +174,7 @@
 
       <!-- LEFT : MASTER PLAN IMAGE -->
       <div class="master-image">
-        <img src="/elan/images/masterplan1.webp" alt="Elan The Statement Master Plan" class="master-thumb"
+        <img src="/elan/images/masterplan1.webp" alt="Elan The Statement Master Plan" loading="lazy" class="master-thumb"
           onclick="openMasterPlan()">
 
         <small class="click-note">Click to view full master plan</small>
@@ -213,70 +212,57 @@
     <img src="/elan/images/masterplan1.webp" alt="Elan The Statement Master Plan Full View" class="master-full">
   </div>
   <!-- ================= FLOOR PLAN ================= -->
-<section id="floorplan" class="apex-floorplan">
+  <section id="floorplan" class="apex-floorplan">
 
-  <div class="container floorplan-wrap">
+    <div class="container floorplan-wrap">
 
-    <!-- LEFT CONTENT -->
-    <div class="floorplan-content">
+      <!-- LEFT CONTENT -->
+      <div class="floorplan-content">
 
-      <h2 class="apex-title">Floor Plans</h2>
-      <span class="apex-line"></span>
+        <h2 class="apex-title">Floor Plans</h2>
+        <span class="apex-line"></span>
 
-      <p>
-        Elan The Statement offers a wide range of thoughtfully planned
-        4 BHK residences and exclusive penthouse layouts. The project
-        features multiple configurations designed to cater to different
-        lifestyle needs while maintaining privacy, space and luxury.
-      </p>
+        <p>
+          Elan The Statement offers a wide range of thoughtfully planned
+          4 BHK residences and exclusive penthouse layouts. The project
+          features multiple configurations designed to cater to different
+          lifestyle needs while maintaining privacy, space and luxury.
+        </p>
 
-      <ul class="floorplan-list">
-        <li>Multiple 4 BHK layout options</li>
-        <li>Exclusive duplex & penthouse configurations</li>
-        <li>Private lift lobbies for select residences</li>
-        <li>Large balconies & expansive living areas</li>
-        <li>Servant room and utility space in all layouts</li>
-        <li>Sky deck options in penthouse residences</li>
-      </ul>
+        <ul class="floorplan-list">
+          <li>Multiple 4 BHK layout options</li>
+          <li>Exclusive duplex & penthouse configurations</li>
+          <li>Private lift lobbies for select residences</li>
+          <li>Large balconies & expansive living areas</li>
+          <li>Servant room and utility space in all layouts</li>
+          <li>Sky deck options in penthouse residences</li>
+        </ul>
 
-      <a
-        href="/elan/brochure/Elan The Statement - Floor Plan.pdf"
-        class="floorplan-btn"
-        target="_blank"
-        download
-      >
-        Download All Floor Plans
-      </a>
+        <a href="/elan/brochure/Elan The Statement - Floor Plan.pdf" class="floorplan-btn" target="_blank" download>
+          Download All Floor Plans
+        </a>
 
-    </div>
+      </div>
 
-    <!-- RIGHT : FLOOR PLAN IMAGES (SLIDER) -->
-    <div class="floorplan-images">
+      <!-- RIGHT : FLOOR PLAN IMAGES (SLIDER) -->
+      <div class="floorplan-images">
 
-      <div class="fp-slider">
-        <div class="fp-track">
+        <div class="fp-slider">
+          <div class="fp-track">
 
-          <img
-            src="/elan/images/floorplan.webp"
-            alt="Elan The Statement Sample 4 BHK Ground Floor Plan"
-            loading="lazy"
-          >
+            <img src="/elan/images/floorplan.webp" alt="Elan The Statement Sample 4 BHK Ground Floor Plan"
+              loading="lazy">
 
-          <img
-            src="/elan/images/floorplan2.webp"
-            alt="Elan The Statement Sample Typical Floor Plan"
-            loading="lazy"
-          >
+            <img src="/elan/images/floorplan2.webp" alt="Elan The Statement Sample Typical Floor Plan" loading="lazy">
 
+          </div>
         </div>
+
       </div>
 
     </div>
 
-  </div>
-
-</section>
-<!-- ================= END FLOOR PLAN ================= -->
+  </section>
   <!-- ================= GALLERY ================= -->
   <section id="gallery">
     <div class="container">
@@ -284,10 +270,10 @@
       <div class="section-line"></div>
 
       <div class="gallery">
-        <img src="/elan/images/image.webp" alt="luxurious hall">
-        <img src="/elan/images/gallery2.webp" alt="elan luxury balcony view">
-        <img src="/elan/images/gallery3.webp" alt="entry view">
-        <img src="/elan/images/gallery4.webp" alt="gardening area">
+        <img src="/elan/images/gallery1.webp" alt="luxurious hall" loading="lazy">
+        <img src="/elan/images/gallery2.webp" alt="elan luxury balcony view" loading="lazy">
+        <img src="/elan/images/gallery3.webp" alt="Elan The Statement main entrance view Sector 49 Gurugram" loading="lazy">
+        <img src="/elan/images/gallery4.webp" alt="gardening area" loading="lazy">
       </div>
     </div>
   </section>
@@ -297,7 +283,7 @@
     <div class="apex-amenities-wrap">
 
       <div class="amenities-image">
-        <img src="/elan/images/amenities.webp" alt="The elan Statement-luxury amenities">
+        <img src="/elan/images/amenities.webp" alt="The elan Statement-luxury amenities" loading="lazy">
       </div>
 
       <div class="amenities-content">
@@ -316,66 +302,66 @@
     </div>
   </section>
   <!-- ===== APEX LANDBASE : POPUP FORM ===== -->
-<div id="apexPopupBg" class="apex-popup-bg">
-  <div class="apex-popup-box">
+  <div id="apexPopupBg" class="apex-popup-bg">
+    <div class="apex-popup-box">
 
-    <button id="apexPopupClose" class="apex-popup-close" aria-label="Close popup">
-      &times;
-    </button>
+      <button id="apexPopupClose" class="apex-popup-close" aria-label="Close popup">
+        &times;
+      </button>
 
-    <div class="apex-popup-header">
-      <img src="/img/image.png" alt="Apex Landbase Logo">
-      <h3>Get Exclusive Details</h3>
-      <p>Register now to receive price, floor plan & offers</p>
+      <div class="apex-popup-header">
+        <img src="/img/image.png" alt="Apex Landbase Logo">
+        <h3>Get Exclusive Details</h3>
+        <p>Register now to receive price, floor plan & offers</p>
+      </div>
+
+      <form id="apexLeadForm" class="apex-lead-form" autocomplete="off">
+        <input type="text" id="apex-name" placeholder="Your Name" required>
+        <input type="email" id="apex-email" placeholder="Email Address" required>
+        <input type="tel" id="apex-phone" placeholder="Phone Number" required>
+
+        <input type="hidden" id="apex-page">
+
+        <button type="submit" class="apex-submit-btn">Submit</button>
+      </form>
     </div>
-
-    <form id="apexLeadForm" class="apex-lead-form" autocomplete="off">
-      <input type="text" id="apex-name" placeholder="Your Name" required>
-      <input type="email" id="apex-email" placeholder="Email Address" required>
-      <input type="tel" id="apex-phone" placeholder="Phone Number" required>
-
-      <input type="hidden" id="apex-page">
-
-      <button type="submit" class="apex-submit-btn">Submit</button>
-    </form>
   </div>
-</div>
 
-<!-- ===== GLOBAL TOAST ===== -->
-<div id="thankYouToast" class="toast">
-  <strong>Thank you!</strong><br>
-  Our team will contact you shortly.
-</div>
+  <!-- ===== GLOBAL TOAST ===== -->
+  <div id="thankYouToast" class="toast">
+    <strong>Thank you!</strong><br>
+    Our team will contact you shortly.
+  </div>
 
-<!-- ================= CONTACT ================= -->
-<section id="contact" class="contact-section">
-  <div class="contact-wrap">
+  <!-- ================= CONTACT ================= -->
+  <section id="contact" class="contact-section">
+    <div class="contact-wrap">
 
-    <div class="contact-text">
-      <h2>Enquire Now</h2>
-      <p>
-        Get complete details about pricing, floor plans and exclusive offers for
-        <strong>Elan The Statement</strong> – an ultra-luxury residential development
-        in Sector 49, Gurugram.
-      </p>
+      <div class="contact-text">
+        <h2>Enquire Now</h2>
+        <p>
+          Get complete details about pricing, floor plans and exclusive offers for
+          <strong>Elan The Statement</strong> – an ultra-luxury residential development
+          in Sector 49, Gurugram.
+        </p>
 
-      <ul>
-        <li>✔ Ultra-Luxury Residences with Premium Finishes</li>
-        <li>✔ Prime Location – Sector 49, Gurugram</li>
-        <li>✔ Smart Living with Home Automation</li>
-        <li>✔ Developed by Elan Group</li>
-      </ul>
+        <ul>
+          <li>✔ Ultra-Luxury Residences with Premium Finishes</li>
+          <li>✔ Prime Location – Sector 49, Gurugram</li>
+          <li>✔ Smart Living with Home Automation</li>
+          <li>✔ Developed by Elan Group</li>
+        </ul>
+      </div>
+
+      <form class="contact-form">
+        <input type="text" placeholder="Your Name" required>
+        <input type="tel" placeholder="Phone Number" required>
+        <input type="email" placeholder="Email Address" required>
+        <button type="submit">Submit Enquiry</button>
+      </form>
+
     </div>
-
-    <form class="contact-form">
-      <input type="text" placeholder="Your Name" required>
-      <input type="tel" placeholder="Phone Number" required>
-      <input type="email" placeholder="Email Address" required>
-      <button type="submit">Submit Enquiry</button>
-    </form>
-
-  </div>
-</section>
+  </section>
   <!-- ================= FOOTER ================= -->
   <footer class="lp-footer">
     <div class="footer-divider"></div>
@@ -397,34 +383,34 @@
       to change. Marketed by <strong>Apex Landbase</strong>.
     </p>
   </footer>
- <!-- ================= ELAN : BROCHURE MODAL ================= -->
-<div id="brochurePopup" class="brochure-modal" role="dialog" aria-modal="true">
+  <!-- ================= ELAN : BROCHURE MODAL ================= -->
+  <div id="brochurePopup" class="brochure-modal" role="dialog" aria-modal="true">
 
-  <div class="modal-box">
+    <div class="modal-box">
 
-    <span class="close-modal" onclick="closeBrochure()">×</span>
+      <span class="close-modal" onclick="closeBrochure()">×</span>
 
-    <h3>Download Brochure</h3>
-    <p>Please fill your details to get the brochure</p>
+      <h3>Download Brochure</h3>
+      <p>Please fill your details to get the brochure</p>
 
-    <form id="brochureForm">
+      <form id="brochureForm">
 
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="tel" name="phone" placeholder="Phone Number" required>
-      <input type="email" name="email" placeholder="Email Address" required>
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="tel" name="phone" placeholder="Phone Number" required>
+        <input type="email" name="email" placeholder="Email Address" required>
 
-      <!-- TRACKING -->
-      <input type="hidden" name="source" value="Brochure Download">
-      <input type="hidden" name="project" value="Elan">
+        <!-- TRACKING -->
+        <input type="hidden" name="source" value="Brochure Download">
+        <input type="hidden" name="project" value="Elan">
 
-      <button type="submit">Submit & Download</button>
+        <button type="submit">Submit & Download</button>
 
-    </form>
+      </form>
+
+    </div>
 
   </div>
-
-</div>
- <!-- EMAILJS -->
+  <!-- EMAILJS -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script>
     emailjs.init("Jt6Vp9_-hORbbxZ79");
