--- a/privacy.html
+++ b/privacy.html
@@ -183,7 +183,7 @@
   </div>
 
   <div class="footer-bottom">
-    <p>copyright © 2026, apexlandbase</p>
+    <p>copyright © 2026, apexlandbase | Managed by ApexLandbase</p>
   </div>
 </footer>
 
