--- a/residential.html
+++ b/residential.html
@@ -291,7 +291,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>copyright © 2026, apexlandbase</p>
+            <p>copyright © 2026, apexlandbase | Managed by ApexLandbase</p>
         </div>
     </footer>
 
