--- a/terms-condition.html
+++ b/terms-condition.html
@@ -188,7 +188,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>copyright © 2026, apexlandbase</p>
+      <p>copyright © 2026, apexlandbase | Managed by ApexLandbase</p>
     </div>
   </footer>
 
